@@ -7,10 +7,10 @@
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 08/01/2022
 # Data de atualização: 08/01/2022
-# Versão: 0.1
+# Versão: 0.01
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 # Testado e homologado para a versão do NFS Server v4.x
-
+#
 # Configurações gerais do Serviço de Rede NFS Server
 [General]
 #
