@@ -1,19 +1,45 @@
-# Number of servers to start up
+# Autor: Robson Vaamonde
+# Site: www.procedimentosemti.com.br
+# Facebook: facebook.com/ProcedimentosEmTI
+# Facebook: facebook.com/BoraParaPratica
+# YouTube: youtube.com/BoraParaPratica
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 03/04/2022
+# Data de atualização: 03/04/2022
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
+# Testado e homologado para a versão do NFS Server v4.x
+#
+# Defina como um valor numérico específico para identificar o número de instâncias do 
+# daemon NFS que você deseja iniciar. O valor padrão, 8, geralmente é suficiente, 
+# embora você queira aumentar esse valor se o servidor NFS estiver servindo arquivos 
+# para um grande número de clientes.
 RPCNFSDCOUNT=8
-
-# Runtime priority of server (see nice(1))
+#
+# Defina como um valor numérico específico para iniciar o daemon NFS em uma prioridade 
+# específica. Os valores numéricos para os quais você pode definir esta opção são os 
+# mesmos usados ​​pelo comando nice . O valor padrão, 0, geralmente é suficiente, embora 
+# você possa querer aumentar esse valor se seu servidor NFS estiver servindo arquivos 
+# para um grande número de clientes e você quiser garantir que ele seja executado em uma 
+# prioridade mais alta do que outros processos no servidor.
 RPCNFSDPRIORITY=0
-
-# Options for rpc.mountd.
-# If you have a port-based firewall, you might want to set up
-# a fixed port here using the --port option. For more information, 
-# see rpc.mountd(8) or http://wiki.debian.org/SecuringNFS
-# To disable NFSv4 on the server, specify '--no-nfs-version 4' here
+#
+# Permite passar argumentos para o daemon rpc.mountd quando ele é iniciado. As mais comuns 
+# são as opções -p listen-port e -o send-port, que você pode usar para definir portas 
+# específicas para o daemon de montagem NFS escutar e enviar. Isso pode ser útil se você 
+# estiver usando um firewall baseado em porta ou se desejar usar portas diferentes dos padrões 
+# como medida de segurança. A menos que seja esse o caso, você normalmente não deve fornecer 
+# um valor para essa opção.
 RPCMOUNTDOPTS="--manage-gids"
-
-# Do you want to start the svcgssd daemon? It is only required for Kerberos
-# exports. Valid alternatives are "yes" and "no"; the default is "no".
+#
+# Defina como não para garantir que o daemon rpc.svcgssd, necessário para o suporte à autenticação 
+# Kerberos, não seja iniciado. Se você estiver usando a autenticação Kerberos com NFS, deverá 
+# definir isso como yes para garantir que esse daemon seja iniciado.
 NEED_SVCGSSD=""
-
-# Options for rpc.svcgssd.
+#
+# permite passar argumentos para o daemon rpc.svcgssd quando ele é iniciado. A maioria das opções 
+# para este daemon altera a localização ou detalhamento de sua saída, que você só desejará alterar 
+# se estiver tendo problemas de autenticação e desejar informações adicionais sobre o que está 
+# fazendo internamente. Você raramente precisará fornecer um valor para essa opção.
 RPCSVCGSSDOPTS=""
